# Data-Structures-and-Algorithms

./: CMakeLists.txt  README.md
Algorithms/: Quick_sort.cpp
Labaratory Work/Part1/Topic2/ex01/: ex01.cpp  stack.cpp
LabaratoryWork/Part1/Topic2/ex01/: stack.cpp  stack.h
LabaratoryWork/Part1/Topic2/ex02/: dynamic_stack.cpp  dynamic_stack.h  ex02.cpp
LabaratoryWork/Part1/Topic2/ex03/: ex03.cpp
LabaratoryWork/Part1/Topic2/ex04(laba1)/: Makefile  ex04.cpp
LabaratoryWork/Part1/Topic2/ex05(laba2)/: Makefile  Queue.cpp  Queue.h  ex05.cpp
LabaratoryWork/Part1/Topic2/ex06/: dynamic_queue.cpp  dynamic_queue.h
LabaratoryWork/Part1/Topic2/ex07(laba3)/: Makefile  ex07.cpp  testrandom.cpp
LabaratoryWork/Part1/Topic3/ex01(laba4)/: static_list.cpp  static_list.h
LabaratoryWork/Part1/Topic3/ex02(laba4)/: main.cpp  static_list.cpp  static_list.h
LabaratoryWork/Part1/Topic3/ex03(laba5)/: list.cpp  list.h  main.cpp
LabaratoryWork/Part1/Topic3/ex05(laba6)/: dynamic_list.cpp  dynamic_list.h  main.cpp
LabaratoryWork/Part1/Topic4/ex01(laba7)/: bi_list.cpp  bi_list.h  main.cpp  test.cpp
LabaratoryWork/Part1/Topic4/ex03(laba8)/: dynamic_list.cpp  dynamic_list.h  list_of_lists.cpp  list_of_lists.h  main.cpp
LabaratoryWork/Part1/Topic5/ex01(laba9)/: B_tree.cpp  B_tree.h  dynamic_stack.cpp  dynamic_stack.h  main.cpp
LabaratoryWork/Part1/Topic5/ex02(laba10)/: main.cpp
Strcutures/LinkedList/: LinkedList.cpp
Structures/LinkedList/: LinkedList.h
Structures/Stack/: dynamicStack.h
tests/: stack.cpp  stack.h  test.cpp
